# publie-exercises

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  buildfts.bat  go.mod  go.sum  main.go  start.bat
api/: main.go  user.go
auth/: auth.go
conf/: conf.go
extends/fts/: fts.go  fts.pb.go
extends/fts/ftslib/: .gitignore  Cargo.toml  build.rs  fts.h
extends/fts/ftslib/src/: core.rs  fts.rs  lib.rs  message.rs  mlog.rs
middleware/: auth.go
model/: answer.go  basemodel.go  init.go  migration.go  options.go  question.go  sqltable.go  topic.go  user.go
protobuf/: fts.proto
serializer/: common.go
server/: router.go
service/: user_login.go  user_registry.go
utils/: main.go
