[package]
name = "fts"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# serde = "1.0.140"
# serde_json = "1.0.82"
[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
fern = { version = "0.6.1", features = ["date-based", "colored"] }
lazy_static = "1.4.0"
libc = "0.2.126"
log = "0.4.17"
prost = "0.11.0"

tantivy = "0.18.0"
tantivy-jieba = "0.6.0"
tokio = { version = "1.20.0", features = ["full"] }


[build-dependencies]
prost-build = "0.11.0"